# multi-agentic-exercises

./: LICENSE  README.md  TASKS.md
00_simple_langchain_invocation/: 00_simple_langchain_invocation.py
02_tool_use_agent/: exercise.py
03_reflection_loop/: exercise.py
06_planning_execute/: exercise.py
07_multi_agent_debate/: exercise.py
14_sequential_pipeline_react/: exercise.py
16_evaluator_optimizer_react/: exercise.py
17_router_react/: exercise.py
18_planning_execute_react/: exercise.py
19_debate_react/: exercise.py
20_supervisor_hub_spoke_react/: exercise.py
21_parallel_fanout_react/: exercise.py
22_orchestrator_worker_react/: exercise.py
cloudops-step-01/docs/: architecture.md
cloudops-step-05/: pyproject.toml
cloudops-step-05/docs/: architecture.md
cloudops_exercises/: README.md
cloudops_exercises/cloudops-step-01/: .env.example  .gitignore  README.md  pyproject.toml
cloudops_exercises/cloudops-step-02/: README.md  pyproject.toml
cloudops_exercises/cloudops-step-03/: README.md  pyproject.toml
cloudops_exercises/cloudops-step-03/docs/: architecture.md
cloudops_exercises/cloudops-step-03/src/cloudops/cli/: run.py
cloudops_exercises/cloudops-step-04/: README.md  pyproject.toml
cloudops_exercises/cloudops-step-05/: .env.example  README.md
cloudops_exercises/cloudops-step-06/: .env.example  README.md  pyproject.toml
code_showcases/: 01_structured_output_pydantic.py  02_hitl_interrupt.py  03_langgraph_command_handoff.py  04_openai_sdk_handoff.py  05_hmac_user_binding.py  06_0_react.py  06_1_react_langfuse.py  06_2_react_opik.py  07_reflection_reflact.py  08_orchestrator_worker.py  09_planning_plan_execute.py  10_tree_of_thoughts.py  README.md  requirements.txt
documentation/: deepeval_docs.md  langchain_docs.md  langfuse_docs.md  langgraph_docs.md  opik_docs.md  ragas_docs.md  tau2bench_docs.md
exercises/11_handoff_swarm/: exercise.py
(+82 files in other folders)
