[project]
name = "cloudops-step-03"
version = "0.1.0"
description = "CloudOps incident triage — Step 3: HITL via interrupt()"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.3.1",
    "langchain-openai>=0.3.0",
    "langchain-core>=1.4.0",
    "pandas>=2.2.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "tabulate>=0.9.0",
    "faker>=26.0",
    "pyyaml>=6.0",
    "numpy>=1.26.0",
    "matplotlib>=3.9.0",
    "langgraph>=1.2.0",
]

[project.scripts]
cloudops = "cloudops.cli.run:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cloudops"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
